--- a/Grafico/PlazoFijos.form
+++ b/Grafico/PlazoFijos.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Grafico.PlazoFijos">
-  <grid id="27dc6" binding="PlazoFijosPanel" layout-manager="GridLayoutManager" row-count="19" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="polazo_fijos_panel" layout-manager="GridLayoutManager" row-count="19" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="989" height="736"/>
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="4cfa4" layout-manager="GridLayoutManager" row-count="13" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="4cfa4" layout-manager="GridLayoutManager" row-count="12" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="19" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -20,7 +20,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="78c78" class="javax.swing.JButton" binding="menuPrincipalButton" default-binding="true">
+          <component id="78c78" class="javax.swing.JButton" binding="menu_principal_button">
             <constraints>
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -30,7 +30,7 @@
               <text value="Menu Principal"/>
             </properties>
           </component>
-          <component id="6af9c" class="javax.swing.JButton" binding="cuentasBancariasButton" default-binding="true">
+          <component id="6af9c" class="javax.swing.JButton" binding="cuentas_bancarias_button">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -40,7 +40,7 @@
               <text value="Cuentas Bancarias"/>
             </properties>
           </component>
-          <component id="1b350" class="javax.swing.JButton" binding="plazoFijosButton" default-binding="true">
+          <component id="1b350" class="javax.swing.JButton" binding="plazo_fijos_button">
             <constraints>
               <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -50,7 +50,7 @@
               <text value="Plazo Fijos"/>
             </properties>
           </component>
-          <component id="a4085" class="javax.swing.JButton" binding="ingresosYGastosButton" default-binding="true">
+          <component id="a4085" class="javax.swing.JButton" binding="ingresos_y_gastos_button">
             <constraints>
               <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -61,7 +61,7 @@
               <text value="Ingresos y Gastos"/>
             </properties>
           </component>
-          <component id="d3172" class="javax.swing.JButton" binding="stocksButton" default-binding="true">
+          <component id="d3172" class="javax.swing.JButton" binding="stocks_button">
             <constraints>
               <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -71,7 +71,7 @@
               <text value="Stocks"/>
             </properties>
           </component>
-          <component id="39c75" class="javax.swing.JButton" binding="tarjetasDeCreditosButton" default-binding="true">
+          <component id="39c75" class="javax.swing.JButton" binding="tarjetas_de_creditos_button">
             <constraints>
               <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -81,7 +81,7 @@
               <text value="Tarjetas de Creditos"/>
             </properties>
           </component>
-          <component id="90aa8" class="javax.swing.JButton" binding="prestamosButton" default-binding="true">
+          <component id="90aa8" class="javax.swing.JButton" binding="prestamos_button">
             <constraints>
               <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -89,17 +89,6 @@
               <background color="-16757148"/>
               <foreground color="-394241"/>
               <text value="Prestamos"/>
-            </properties>
-          </component>
-          <component id="cc3ba" class="javax.swing.JButton" binding="gastosButton" default-binding="true">
-            <constraints>
-              <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-16757148"/>
-              <enabled value="true"/>
-              <foreground color="-394241"/>
-              <text value="Gastos"/>
             </properties>
           </component>
           <component id="bf70f" class="javax.swing.JLabel">
@@ -113,12 +102,12 @@
           </component>
           <vspacer id="3fe9">
             <constraints>
-              <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <vspacer id="344d">
             <constraints>
-              <grid row="12" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
           <hspacer id="d6fe9">
@@ -185,7 +174,7 @@
           <text value="Interes Mensual"/>
         </properties>
       </component>
-      <component id="2418f" class="javax.swing.JTextField" binding="tfInteresAnual">
+      <component id="2418f" class="javax.swing.JTextField" binding="tf_interes_anual">
         <constraints>
           <grid row="6" column="5" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -209,7 +198,7 @@
           <text value="Interes Acumulado"/>
         </properties>
       </component>
-      <component id="8baf6" class="javax.swing.JTextField" binding="tfInteresAcumulado">
+      <component id="8baf6" class="javax.swing.JTextField" binding="tf_interes_acumulado">
         <constraints>
           <grid row="7" column="5" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -225,7 +214,7 @@
           <text value="Interes Actual"/>
         </properties>
       </component>
-      <component id="31e52" class="javax.swing.JTextField" binding="tfInteresMensual">
+      <component id="31e52" class="javax.swing.JTextField" binding="tf_interes_mensual">
         <constraints>
           <grid row="5" column="5" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -233,7 +222,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="9f7df" class="javax.swing.JTextField" binding="tfInteresActual">
+      <component id="9f7df" class="javax.swing.JTextField" binding="tf_interes_actual">
         <constraints>
           <grid row="4" column="5" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -249,7 +238,7 @@
           <text value="Ingresas ID Plazo fijo"/>
         </properties>
       </component>
-      <component id="f6d05" class="javax.swing.JTextField" binding="tfIdPlazo">
+      <component id="f6d05" class="javax.swing.JTextField" binding="tfId_plazo">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -259,7 +248,7 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="8c89" class="javax.swing.JButton" binding="btnEliminarPlazo">
+      <component id="8c89" class="javax.swing.JButton" binding="btn_eliminar_plazo">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -267,7 +256,7 @@
           <text value="Eliminar Plazo Fijo"/>
         </properties>
       </component>
-      <component id="9c81d" class="javax.swing.JButton" binding="btnAgregarPlazo">
+      <component id="9c81d" class="javax.swing.JButton" binding="btn_agregar_plazo">
         <constraints>
           <grid row="6" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -291,7 +280,7 @@
           <text value="Monto Original"/>
         </properties>
       </component>
-      <component id="192e7" class="javax.swing.JTextField" binding="tfMontOriginal">
+      <component id="192e7" class="javax.swing.JTextField" binding="tf_monto_original">
         <constraints>
           <grid row="10" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -307,7 +296,7 @@
           <text value="Tasa Interes"/>
         </properties>
       </component>
-      <component id="e8192" class="javax.swing.JTextField" binding="tfNombre">
+      <component id="e8192" class="javax.swing.JTextField" binding="tf_nombre">
         <constraints>
           <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -315,7 +304,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="d5610" class="javax.swing.JTextField" binding="tfTasaInt">
+      <component id="d5610" class="javax.swing.JTextField" binding="tf_tasaint">
         <constraints>
           <grid row="11" column="3" row-span="1" col-span="6" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -331,7 +320,7 @@
           <text value="Fecha de inicio"/>
         </properties>
       </component>
-      <grid id="47c3a" binding="fechaInicioPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="47c3a" binding="fecha_inicio_panel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="12" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -348,7 +337,7 @@
           <text value="Descripción"/>
         </properties>
       </component>
-      <component id="277da" class="javax.swing.JTextField" binding="tfDescripcion">
+      <component id="277da" class="javax.swing.JTextField" binding="tf_descripcion">
         <constraints>
           <grid row="8" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -364,7 +353,7 @@
           <text value="Fecha final"/>
         </properties>
       </component>
-      <grid id="b8729" binding="fechaFinalPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="b8729" binding="fecha_final_panel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="13" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -381,7 +370,7 @@
           <text value="Plazo"/>
         </properties>
       </component>
-      <component id="1e740" class="javax.swing.JTextField" binding="tfPlazo">
+      <component id="1e740" class="javax.swing.JTextField" binding="tf_plazo">
         <constraints>
           <grid row="14" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -397,7 +386,7 @@
           <text value="Cuenta de Banco"/>
         </properties>
       </component>
-      <component id="1fa8d" class="javax.swing.JComboBox" binding="cbCuentaBanco">
+      <component id="1fa8d" class="javax.swing.JComboBox" binding="cb_cuenta_banco">
         <constraints>
           <grid row="15" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -415,7 +404,7 @@
           <text value="Tipo"/>
         </properties>
       </component>
-      <component id="77894" class="javax.swing.JTextField">
+      <component id="77894" class="javax.swing.JTextField" binding="tf_tipo">
         <constraints>
           <grid row="9" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -423,14 +412,14 @@
         </constraints>
         <properties/>
       </component>
-      <scrollpane id="2137d" binding="spPlazofijo">
+      <scrollpane id="2137d" binding="sp_plazo_fijo">
         <constraints>
           <grid row="16" column="3" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="6c838" class="javax.swing.JTable" binding="plazofijoTable">
+          <component id="6c838" class="javax.swing.JTable" binding="plazofijo_table">
             <constraints/>
             <properties/>
           </component>
