--- a/Grafico/AgregarCuentaBanco.form
+++ b/Grafico/AgregarCuentaBanco.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Grafico.AgregarCuentaBanco">
-  <grid id="27dc6" binding="AgregarCuentaBancoPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="agregar_cuenta_banco_panel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="770" height="690"/>
@@ -56,7 +56,7 @@
               <grid row="20" column="7" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="55d46" class="javax.swing.JButton" binding="Volverbtn2">
+          <component id="55d46" class="javax.swing.JButton" binding="volverbtn2">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -76,7 +76,7 @@
               <grid row="18" column="8" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <component id="293e3" class="javax.swing.JTextField" binding="tfBancoOrigen">
+          <component id="293e3" class="javax.swing.JTextField" binding="tf_banco_origen">
             <constraints>
               <grid row="13" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -104,7 +104,7 @@
               <text value="Descripción"/>
             </properties>
           </component>
-          <component id="f3e94" class="javax.swing.JTextField" binding="tfDescripcion">
+          <component id="f3e94" class="javax.swing.JTextField" binding="tf_descripcion">
             <constraints>
               <grid row="7" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -121,7 +121,7 @@
               <text value="Tipo de Cuenta"/>
             </properties>
           </component>
-          <component id="56954" class="javax.swing.JTextField" binding="tfNombreCuenta">
+          <component id="56954" class="javax.swing.JTextField" binding="tf_nombre_cuenta">
             <constraints>
               <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -159,7 +159,7 @@
               <text value="Número de Cuenta"/>
             </properties>
           </component>
-          <component id="6b711" class="javax.swing.JTextField" binding="tfNumeroCuenta">
+          <component id="6b711" class="javax.swing.JTextField" binding="tf_numero_cuenta">
             <constraints>
               <grid row="11" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -178,7 +178,7 @@
               <text value="Banco de Origen"/>
             </properties>
           </component>
-          <component id="90997" class="javax.swing.JTextField" binding="tfSaldoInicial">
+          <component id="90997" class="javax.swing.JTextField" binding="tf_saldo_inicial">
             <constraints>
               <grid row="15" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -195,15 +195,7 @@
               <text value="Saldo inicial"/>
             </properties>
           </component>
-          <component id="6e27e" class="javax.swing.JTextField" binding="tfTasaInteres">
-            <constraints>
-              <grid row="17" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="b9dd4" class="javax.swing.JButton" binding="crearButton" default-binding="true">
+          <component id="b9dd4" class="javax.swing.JButton" binding="crear_button">
             <constraints>
               <grid row="20" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -229,6 +221,14 @@
               <foreground color="-327681"/>
               <text value="Fecha de Inicio"/>
             </properties>
+          </component>
+          <component id="6e27e" class="javax.swing.JTextField" binding="tf_tasa_interes">
+            <constraints>
+              <grid row="17" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
