--- a/Grafico/Dashboard.form
+++ b/Grafico/Dashboard.form
@@ -184,14 +184,35 @@
             <border type="none"/>
             <children/>
           </grid>
-          <grid id="994c4" binding="pastel_subclase_panel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="994c4" binding="pastel_subclase_panel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
-            <children/>
+            <children>
+              <component id="ce3ac" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font name="Book Antiqua" size="26" style="1"/>
+                  <inheritsPopupMenu value="false"/>
+                  <text value="Bienvenido A Sus Finanzas Personales"/>
+                  <verifyInputWhenFocusTarget value="false"/>
+                </properties>
+              </component>
+              <component id="23497" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font name="Bookshelf Symbol 7" size="18"/>
+                  <text value="Estos son sus comportamientos de ingresos y gastos más recientes"/>
+                </properties>
+              </component>
+            </children>
           </grid>
         </children>
       </grid>
