--- a/Grafico/Prestamos.form
+++ b/Grafico/Prestamos.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="PrestamosPanel" layout-manager="GridLayoutManager" row-count="17" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1008" height="1083"/>
+      <xy x="20" y="20" width="1008" height="1079"/>
     </constraints>
     <properties>
       <preferredSize width="960" height="920"/>
@@ -262,7 +262,7 @@
           <text value="Agregar Préstamo"/>
         </properties>
       </component>
-      <scrollpane id="8f55" binding="JScrollPane_prestamos">
+      <scrollpane id="8f55" binding="j_scroll_pane_prestamos">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -306,7 +306,7 @@
       </component>
       <component id="56d6f" class="javax.swing.JTextField" binding="tf_taza_interes">
         <constraints>
-          <grid row="11" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="11" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="2" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -329,34 +329,17 @@
         <border type="none"/>
         <children/>
       </grid>
-      <component id="5d6d0" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="13" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Fecha de Vencimiento"/>
-        </properties>
-      </component>
-      <grid id="e31fa" binding="fecha_de_vencimiento_panel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="13" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children/>
-      </grid>
       <component id="6df" class="javax.swing.JLabel">
         <constraints>
-          <grid row="14" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="13" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Estatus"/>
         </properties>
       </component>
-      <component id="14839" class="javax.swing.JComboBox" binding="cbEstatus">
+      <component id="14839" class="javax.swing.JComboBox" binding="cb_estatus">
         <constraints>
-          <grid row="14" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="13" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
@@ -366,9 +349,9 @@
           </model>
         </properties>
       </component>
-      <component id="ac8d0" class="javax.swing.JButton" binding="btnAgregarPrestamo">
+      <component id="ac8d0" class="javax.swing.JButton" binding="btn_agregar_prestamo">
         <constraints>
-          <grid row="15" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="14" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Agregar Préstamo"/>
